* moved relay state to separate model class  * save relay state to eeprom  * more command handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ add_avr_executable(
     main.cpp 
     relay_controller.cpp relay_controller.hpp 
     user_interface.cpp user_interface.hpp
-    command_handler.cpp command_handler.hpp
+    connection_handler.cpp connection_handler.hpp
+    model.cpp model.hpp
 )
 
 
