- socket names - moved code to directory src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,3 @@
 cmake_minimum_required(VERSION 2.6)
 
-add_avr_executable(
-    powerbar
-    main.cpp 
-    relay_controller.cpp relay_controller.hpp 
-    user_interface.cpp user_interface.hpp
-    connection_handler.cpp connection_handler.hpp
-    model.cpp model.hpp
-)
-
-
+add_subdirectory( src )
